# beat-the-maml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  start.sh  start_deploy.sh  traefik.yaml  upload.sh
app/: app.py  setup.py
app/sen12ms/: __init__.py  sen12ms.py  utils.py
app/static/css/: index.css
app/static/img/0/test/: meta.txt
app/static/img/0/train/: meta.txt
app/static/img/1/test/: meta.txt
app/static/img/1/train/: meta.txt
app/static/img/10/test/: meta.txt
app/static/img/10/train/: meta.txt
app/static/img/100/test/: meta.txt
app/static/img/100/train/: meta.txt
app/static/img/101/test/: meta.txt
app/static/img/101/train/: meta.txt
app/static/img/102/test/: meta.txt
app/static/img/102/train/: meta.txt
app/static/img/103/test/: meta.txt
app/static/img/103/train/: meta.txt
app/static/img/104/test/: meta.txt
app/static/img/104/train/: meta.txt
app/static/img/105/test/: meta.txt
app/static/img/105/train/: meta.txt
app/static/img/106/test/: meta.txt
app/static/img/106/train/: meta.txt
app/static/img/107/test/: meta.txt
app/static/img/107/train/: meta.txt
app/static/img/108/test/: meta.txt
app/static/img/108/train/: meta.txt
app/static/img/109/test/: meta.txt
app/static/img/109/train/: meta.txt
app/templates/: index.html
cert/: Dockerfile  docker-compose.yml  generate_selfsigned_certificate.sh
data/: 2020_09_TUM_sen12ms-human-few-shot-classifiers-results.json
notebooks/: analyse_results.ipynb
(+1956 files in other folders)
