[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = "Hello World with Flask and Docker"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
