[tool.poetry]
name = "Sen12MS-Human-Fewshot-Classifier"
version = "0.1.0"
description = "An interactive game to solve few-shot land cover tasks"
authors = ["Marc Russwurm <marc.russwurm@epfl.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
